fixtures/metadata-resolve/failing/model_permissions/disallow_duplicate_argument_preset/resolve_error.expected
Error: Error in model permission for model 'Albums (in subgraph subgraphs)' for role 'user': preset argument 'include_rereleases' is defined more than once
    ╭─[ <unknown>:61:25 ]
    │
 61 │                 "role": "user",
    │                         ───┬──  
    │                            ╰──── The duplicate is defined in argument presets for this role
    │ 
 71 │                       "argument": "include_rereleases",
    │                                   ──────────┬─────────  
    │                                             ╰─────────── This argument preset is a duplicate
────╯
